# NsCatGrayQt-Plugin

./: .gitignore  CMakeLists.txt  CMakeSettings.json  NsCatGrayQt.pro  README.md  README_ch.md
CatQtPlugins/: .gitignore
CatQtPlugins/QuickPlugin/: CMakeLists.txt  Dllmain.cpp  NsisQtQuickPlugin.cpp  QQuickSetup.cpp  QQuickSetup.h  QtQuickPlugin.pro
CatQtPlugins/QuickPlugin/Resources/qml/: main.qml
CatQtPlugins/WidgetPlugin/: CMakeLists.txt  NsisQtWidgetPlugin.cpp  QWidgetSetup.cpp  QWidgetSetup.h  QWidgetSetup.ui  QtWidgetPlugin.pro
CatQtPlugins/build-QtWidgetPlugin-Desktop_Qt_5_15_2_MSVC2019_32bit-Debug/: .qmake.stash
CatQtPlugins/build-QtWidgetPlugin-Desktop_Qt_5_15_2_MSVC2019_32bit-Debug/debug/: moc_predefs.h
CatQtPlugins/build-QtWidgetPlugin-Desktop_Qt_5_15_2_MSVC2019_32bit-Release/release/: QtWidgetPlugin.exp  moc_predefs.h
Examples/: TestCatGrayFunc.nsi
Examples/QuickExamples/: QuickExamples.nsi
Examples/SubPrcc/: Subprcc.nsi
Examples/TestCatGrayFunc/: TestCatGrayFunc.nsi
Examples/WidgetExamples/: 01.txt  WidgetExamples.nsi
Include/: CatGrayFunc.nsh
NsCatGrayQtCore/: CmakeLists.txt  DriverInfo.cpp  InstallEvent.h  NsCatGrayQtCore.pri  PluginCommon.h  PluginContext.cpp  PluginContext.h  SetupPageInterface.h  dllmain.cpp  resource.h  stdafx.h
VCRuntimeDLL/: .gitignore
module/Python/: ExtractFiles.py
